--- a/index.html
+++ b/index.html
@@ -3,24 +3,63 @@
 
 <head>
     <meta charset="UTF-8">
-    <!-- <link rel="stylesheet" href="./assets/CSS/style.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+        integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="./assets/CSS/style.css">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <script defer src="./assets/Js/main.js"></script>
-    <link defer href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+    <link defer href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>js-array-object-carousel</title>
 </head>
 
 <body>
-    <div class="container">
-        <div class="row">
-            <div class="carousel">
-                <img class="img-fluid" src="./assets/img/01.webp" alt="">
-              <i class="fa-solid fa-angle-up fa-lg prev_image"></i>
-              <i class="fa-solid fa-angle-down fa-lg next_image"></i>
-            </div>
-        </div>
-      </div>
+
+
+	<div class="container">
+		<button class="revert">
+			<i class="fa-solid fa-arrow-rotate-left">  Revert autoplay</i>
+		</button>
+		<div class="slider rounded-5">
+			<div class="controls">
+				<button class="prev">
+					<i class="fa fa-arrow-up"> Prev</i>
+				</button>
+				<button class="next">
+					<i class="fas fa-arrow-down"> Next</i>
+				</button>
+			</div>
+			<div class="slides">
+
+				<!-- <div class="slide active">
+					<img src="./assets/img/01.webp" alt="">
+				</div>
+				<div class="slide">
+					<img src="./assets/img/02.webp" alt="">
+				</div>
+				<div class="slide">
+					<img src="./assets/img/03.webp" alt="">
+				</div>
+				<div class="slide">
+					<img src="./assets/img/04.webp" alt="">
+				</div>
+				<div class="slide">
+					<img src="./assets/img/05.webp" alt="">
+				</div> -->
+			</div>
+			<div class="thumbs">
+				<!-- <img src="./assets/img/01.webp" alt="" class="active">
+				<img src="./assets/img/02.webp" alt="">
+				<img src="./assets/img/03.webp" alt="">
+				<img src="./assets/img/04.webp" alt="">
+				<img src="./assets/img/05.webp" alt=""> -->
+			</div>
+		</div>
+	</div>
+
+
 
 </body>
 
